--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
 
     <title>word-typer-timer</title>
 
-    <link rel="stylesheet" href="/style.css" />
+    <link rel="stylesheet" href="./style.css" />
 
-    <script src="/script.js" defer></script>
+    <script src="./script.js" defer></script>
   </head>
   <body>
     <div class="content">
