--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
       </div>
       <div id="start">
-        Press Spacebar
+        Press Spacebar to start
       </div>
     </div>
   </body>
