added link and copy to clipboard

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
 
-    <title>word-typer-timer</title>
+    <title>Word TypeR</title>
 
     <link rel="stylesheet" href="./style.css" />
 
@@ -22,5 +22,7 @@
         Press Spacebar to start
       </div>
     </div>
+    <input id="url" type="text" readonly>
+    </input>
   </body>
 </html>
